Partially fix language cards on small screens
TODO: ensure all screen sizes are ok

--- a/public/css/trielingual.css
+++ b/public/css/trielingual.css
@@ -1548,6 +1548,17 @@ select {
 
     #landing {
         max-width: 98%;
+        padding: 0 6px;
+    }
+
+    .language-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+        gap: 6px;
+    }
+
+    .language-card {
+        padding: 18px 0;
     }
 }
 
